fixed home image problem and gave gap between answers

--- a/client/src/components/Button.scss
+++ b/client/src/components/Button.scss
@@ -12,6 +12,8 @@
   border-color: black;
   color: black;
   background-color: transparent;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .button:hover {
