--- a/client/src/components/Home/HomePage.scss
+++ b/client/src/components/Home/HomePage.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-self: center;
   width: 100%;
-  height: 950px;
+  height: calc(100vh - 65px);
   opacity: 35%;
 }
 
